# DSR_DeepTree

./: .gitignore  README.md
task_1/: execution_guide.md  safety_and_parameters.md
task_1/pick_place_ws/src/pick_place_demo/: package.xml  setup.py
task_1/pick_place_ws/src/pick_place_demo/launch/: pick_place.launch.py
task_1/pick_place_ws/src/pick_place_demo/pick_place_demo/: pick_place_client.py  pick_place_server.py  robot_controller.py
task_1/pick_place_ws/src/pick_place_interfaces/: CMakeLists.txt  package.xml
task_1/pick_place_ws/src/pick_place_interfaces/action/: PickAndPlace.action
task_1/pick_place_ws/src/pick_place_interfaces/msg/: GripperState.msg  TaskStatus.msg
task_1/pick_place_ws/src/pick_place_interfaces/srv/: GetTaskList.srv  SetGripper.srv
task_2/: README.md
task_2/yolo_pick_ws/src/yolo_pick_demo/launch/: yolo_pick.launch.py  yolo_pick_box_moveit.launch.py  yolo_pick_moveit.launch.py  yolo_pick_sort_moveit.launch.py
task_2/yolo_pick_ws/src/yolo_pick_demo/yolo_pick_demo/: yolo_pick_box_moveit_node.py  yolo_pick_node.py  yolo_pick_sort_moveit_node.py
task_3/: README.md
task_3/stt_robot_ws/src/stt_robot_demo/: package.xml  setup.cfg  setup.py
task_3/stt_robot_ws/src/stt_robot_demo/config/: keyword_map.yaml
task_3/stt_robot_ws/src/stt_robot_demo/launch/: stt_demo.launch.py
task_3/stt_robot_ws/src/stt_robot_demo/stt_robot_demo/: nlp_node.py  stt_node.py  stt_pick_and_place.py  tts_node.py
task_3/stt_robot_ws/src/stt_robot_interfaces/: CMakeLists.txt  package.xml
task_3/stt_robot_ws/src/stt_robot_interfaces/msg/: VoiceCommand.msg
task_3/stt_robot_ws/src/stt_robot_interfaces/srv/: Speak.srv
task_4/: README.md  isaac_moveit_m0609_rg2.py
task_4/IsaacSim-ros_workspaces/humble_ws/src/: isaac_moveit.py
task_4/IsaacSim-ros_workspaces/humble_ws/src/moveit/isaac_moveit/: CMakeLists.txt  README_DSR.md  package.xml
task_4/IsaacSim-ros_workspaces/humble_ws/src/moveit/isaac_moveit/config/: dsr_isaac.ros2_control.xacro  dsr_m0609_isaac.urdf.xacro  dsr_m0609_rg2.srdf  dsr_m0609_rg2_isaac.urdf.xacro  dsr_m0609_rg2_real.urdf.xacro  dsr_m0609_rg2_ros2_control.xacro  dsr_m1013_isaac.urdf.xacro  m0609_rg2_controllers.yaml  m0609_rg2_moveit_controllers.yaml  m0609_rg2_real_controllers.yaml  onrobot_rg2_isaac.xacro
task_4/IsaacSim-ros_workspaces/humble_ws/src/moveit/isaac_moveit/launch/: isaac_moveit_dsr.launch.py  isaac_moveit_dsr_m0609.launch.py  isaac_moveit_dsr_m0609_rg2.launch.py
task_4/m0609_urdf/.github/workflows/: docker-image.yml
task_4/m0609_urdf/urdf/: m0609_isaac_sim.urdf
(+3 files in other folders)
